# TheBundle

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py  todo.md
.github/actions/setup-test/: action.yml
.github/workflows/: auto-reference-update.yml  deploy-docs.yml  publish-on-release.yml  publish-pypi.yml  python-darwin.yml  python-ubuntu.yml  python-windows.yml  ruff.yml
backup/blender/: generate_audio_scene1.py  generate_audio_scene2.py  generate_audio_scene3.py  generate_audio_scene4.py  generate_audio_scene5.py
demo/: clean_pycache.py  profiler_report.py
profiler/: report.py
references/darwin/schema/: TestGraphAsync.json
references/linux/schema/: TestGraphSync.json  TestNodeSync.json
references/windows/schema/: TestNodeAsync.json  TestNodeProcessAsync.json  TestNodeStreamingAsyncProcess.json  TestNodeStreamingProcess.json
scripts/: generate_paris_roads_usd.py
src/bundle/: __init__.py  cli.py
src/bundle/ai/: __init__.py
src/bundle/ai/gpt/: __init__.py  agent.py  cli.py  client.py  orchestrator.py
src/bundle/audio/: __init__.py  engine.py  models.py  protocol.py
src/bundle/ble/: __init__.py  cli.py  device.py  framing.py  link.py  manager.py  scanner.py  vendors.py
src/bundle/blender/: README.md  cli.py
src/bundle/blender/app/: __init__.py  manager.py
src/bundle/blender/config/: base.py
src/bundle/blender/projects/: __init__.py  base.py  registry.py
src/bundle/blender/runtime/: __init__.py  app.py  environment.py  packaging.py  session.py
src/bundle/blender/toolkit/: README.md
src/bundle/chat/: __init__.py  message.py  peer.py
src/bundle/core/: __init__.py  app_data.py  atom.py  browser.py  data.py  downloader.py  entity.py  logger.py  platform.py  process.py  sockets.py  tracer.py  utils.py
src/bundle/core/data/: __init__.py  data.py  json.py
src/bundle/core/entity/: __init__.py  entity.py
src/bundle/core/graphs/: __init__.py
src/bundle/core/logger/: logger.py
src/bundle/core/nodes/: __init__.py  asynchronous.py  base.py  synchronous.py
src/bundle/core/platform/: __init__.py  base.py  command.py  darwin.py  platform.py  windows.py
src/bundle/core/process/: __init__.py  asynchronous.py  synchronous.py
src/bundle/core/tasks/: __init__.py  asynchronous.py  synchronous.py
src/bundle/core/tracer/: __init__.py  asyn.py  syn.py
src/bundle/discord/: __init__.py  bot.py  cli.py  embeds.py  help.py
src/bundle/discord/cogs/: __init__.py  core.py  greet.py  lifecycle.py  music.py  (+1 more)
src/bundle/docs/: README.md  __init__.py  builder.py  cli.py  config.py  copyright.py  discovery.py
src/bundle/gs3d/: README.md  __init__.py  bridge.py  cli.py  data.py  demo.py  ply.py  temporal.py
src/bundle/hdf5/: README.md  __init__.py  store.py
src/bundle/lambdalabs/: README.md  __init__.py  cli.py  client.py  config.py  models.py  runner.py
src/bundle/latex/: README.md  __init__.py  document.py  elements.py
src/bundle/legalai/: README.md  __init__.py  cli.py  config.py  conversation.py  embeddings.py  evaluation.py  retrieval.py  summarization.py  training.py
src/bundle/perf_report/: README.md  __init__.py  cli.py  extractor.py  report.py  storage.py
src/bundle/player/: __init__.py  app.py  main.py  player.py  player_controls.py  player_engine.py  player_queue.py  styles.py
src/bundle/pybind/: __init__.py  api.py  cli.py  cmake.py  config.py  core.py  extension.py  pkgconfig.py  plugin.py  pybind.py  setup_helper.py
src/bundle/recon3d/: README.md  __init__.py  cli.py  contracts.py  datasets.py  pipeline.py  workspace.py
src/bundle/scraper/: __init__.py  cli.py
src/bundle/testing/: README.md  __init__.py  cli.py
src/bundle/tracy/: README.md  __init__.py  _fallback.py  cli.py  pybind_plugin.py  pyproject.toml  setup.py
src/bundle/tracy/binding/: _tracy_ext.cpp
src/bundle/usd/: README.md  __init__.py  backend.py  cli.py  export.py  map.py  model.py  ply.py  scene.py
src/bundle/website/: README.md  __init__.py  cli.py  package-lock.json  package.json  tsconfig.website.json
src/bundle/youtube/: __init__.py  browser.py  cli.py  database.py  media.py  pytube.py  resolver.py  track.py
tests/: conftest.py  stacklevel_calibration.py  test_data.py  test_entity.py  test_graph.py  test_nodes.py  test_process.py  test_tasks.py
tests/audio/: test_engine.py  test_protocol_and_stream.py
tests/blender/: test_app_manager.py
tests/chat/: test_chat.py
tests/core/: test_browser.py  test_data.py  test_platform.py  test_process.py  test_socket.py  test_tracer.py
tests/gs3d/: test_data.py  test_generators.py  test_ply.py
tests/hdf5/: test_store.py
tests/perf_report/: test_extractor.py  test_storage.py
tests/player/: test_track.py
tests/pybind/: conftest.py  test_cmake.py  test_config.py  test_core.py  test_example_module.py  test_pkgconfig.py  test_pybind.py
tests/pybind/example_module/: .gitignore  CMakeLists.txt  build.py  pyproject.toml  setup.py  test_example_module.py
tests/pybind/example_module/bindings/python/example_module/: __init__.py  geometry.pyi  geometry_bindings.cpp  shape_bindings.cpp
tests/pybind/example_module/include/example_module/geometry/: Composite.hpp  Utils.hpp
tests/pybind/example_module/include/example_module/shape/: Circle.hpp  Shape.hpp  Square.hpp  Triangle.hpp
tests/pybind/example_module/src/geometry/: Composite.cpp  Utils.cpp
tests/pybind/example_module/src/shape/: Circle.cpp  Square.cpp  Triangle.cpp
tests/pybind/real_case/: pyproject.toml  test_integration.py
tests/pybind/real_case/bindings/python/realpkg/: __init__.py  bindings.cpp
tests/pybind/real_case/src/reallib/: adder.cpp  adder.hpp
tests/pybind/services/: test_cmake.py  test_integration.py  test_pkgconfig.py
tests/usd/: test_model.py
tests/website/: conftest.py  test_ble.py  test_component_registry.py  test_excalidraw.py  test_home.py  test_playground.py  test_widget_registry.py
tests/website/core/: test_app.py  test_cli.py  test_components.py  test_pages.py
tests/youtube/: test_pytube.py
wizards/: run.sh
(+543 files in other folders)
