[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "thebundle"
dynamic = ["version"]
description = "A modern, extensible Python framework for robust, maintainable, and high-performance software projects."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "M. Treglia", email = "horuselohim@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "framework",
    "async",
    "testing",
    "pybind11",
    "zmq",
    "automation",
    "tracing",
    "logging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "zmq",
    "tqdm",
    "rich",
    "toml",
    "wheel",
    "click",
    "aiohttp",
    "pybind11",
    "tabulate",
    "rich_click",
    "requests",
    "colorama",
    "aiofiles",
    "pydantic",
    "jsonschema",
    "asyncclick",
    "playwright",
    "setuptools",
    "typing-extensions",
    "tornado>=6.1; sys_platform == 'win32'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bundle.pods" = ["pods/**/*", "pods/**/.gitkeep"]

[tool.setuptools_scm]
version_file = "src/bundle/_version.py"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "nest_asyncio"]
dev = ["snakeviz"]
pypi = ["build", "twine"]
ble = ["bleak>=0.22.1", "pyyaml"]
discord = ["discord.py[voice]>=2.3"]
youtube = ["pytubefix", "mutagen", "ffmpeg-python"]
report = ["latex", "matplotlib", "h5py", "numpy"]
web = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "jinja2",
    "bleak>=0.22.1",
    "pyyaml",
]
website = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "jinja2",
    "httpx",
    "bleak>=0.22.1",
    "pyyaml",
    "pytubefix",
    "mutagen",
    "ffmpeg-python",
    "python-multipart",
]
hdf5 = ["h5py", "numpy"]
docs = ["sphinx>=7.0", "furo", "myst-parser>=2.0", "sphinx-autoapi>=3.0"]
all = [
    "pytest",
    "pytest-asyncio",
    "nest_asyncio",
    "snakeviz",
    "build",
    "twine",
    "bleak>=0.22.1",
    "pyyaml",
    "pytubefix",
    "mutagen",
    "ffmpeg-python",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "jinja2",
    "httpx",
    "python-multipart",
    "latex",
    "matplotlib",
    "h5py",
    "numpy",
    "sphinx>=7.0",
    "furo",
    "myst-parser>=2.0",
    "sphinx-autoapi>=3.0",
]

[project.urls]
Homepage = "https://github.com/HorusElohim/TheBundle"
Source = "https://github.com/HorusElohim/TheBundle"
Issues = "https://github.com/HorusElohim/TheBundle/issues"
Changelog = "https://github.com/HorusElohim/TheBundle/releases"

[project.scripts]
bundle = "bundle.cli:main"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
testpaths = ["tests"]
log_cli = true
log_cli_level = "ERROR"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 128
src = ["src"]
exclude = [
    "src/bundle/pods/pods/comfyui/data/custom_nodes",
    "src/bundle/tracy/vendor",
    "src/bundle/_version.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (can reduce readability)
    "F401",   # unused imports (re-exports in __init__.py)
    "F403",   # star imports
    "RUF012", # mutable class default (pydantic models)
    "E402",   # module-level import not at top (intentional in __init__.py)
    "UP035",  # deprecated typing imports (typing.List etc, fix incrementally)
    "SIM105", # contextlib.suppress suggestion (style preference)
]

[tool.ruff.lint.isort]
known-first-party = ["bundle"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
