[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools_scm",
    "thebundle",
]
build-backend = "setuptools.build_meta"

[project]
name = "realpkg"
dynamic = ["version"]
description = "Example Python package with pybind11 bindings."
authors = [{ name = "M. Treglia", email = "horuselohim@gmail.com" }]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["bindings/python"]

[tool.pybind11]

[[tool.pybind11.modules]]
    name = "realpkg.bindings"
    sources = [
    "src/reallib/adder.cpp",
    "bindings/python/realpkg/bindings.cpp"
    ]
    language = "c++"
    cpp_std = "20"
    include_dirs = ["src/reallib"]

